--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,5 @@
 {
   "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "https://dental-inventory-control.herokuapp.com/api/$1"
-    }
+    { "source": "/(.*)", "destination": "/" }
   ]
 }
