--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.2",
     "@mui/material": "^7.1.2",
+    "@zxing/browser": "^0.1.5",
     "axios": "^1.10.0",
     "cors": "^2.8.5",
     "notistack": "^3.0.2",
+    "quagga": "^0.12.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2"
